--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+  <title>NEA HCMS</title>
 </head>
 
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
+    <iframe src="http://www.chai-ava.com/" title="Appsmith"></iframe>
   </main>
 </body>
 
