--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>NEA HCMS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"
+    <title></title>
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-    <iframe src="http://www.chai-ava.com/" title="Appsmith"></iframe>
-  </main>
+    <iframe src="http://www.chai-ava.com/app/nea-hcms/page1-6379d2cd473d99149b77dfd3" height="700" width="100%"></iframe>
 </body>
-
 </html>
