--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1"
-    <title></title>
+	<title></title>
 </head>
 <body>
-    <iframe src="http://www.chai-ava.com/app/nea-hcms/page1-6379d2cd473d99149b77dfd3" height="700" width="100%"></iframe>
+    <iframe src="https://app.appsmith.com/applications/5f2aeb2580ca1f6faaed4e4a/pages/5f2d61b580ca1f6faaed4e79?embed=true" height="700" width="100%"></iframe>
 </body>
 </html>
